--- a/client/index.html
+++ b/client/index.html
@@ -1066,8 +1066,8 @@
 
       var terminalActive = false
       function onRecieve(data) {
-        console.log("%c" + data, 'background: #000; color: #ff00ff')
         if (data.startsWith("~")) {
+          console.log("%c" + data, 'background: #000; color: #00ff00')
           // Send message to terminal if it is open
           if (page === "home-games-project-edit") {
             term.write((data.slice(1)).replace(/\x07/g, "\x1b[31m[DEBUG]\x1b[0m ").replace(/\n/g, "\r\n"))
@@ -1084,6 +1084,8 @@
           iframe?.contentWindow?.postMessage(data.slice(1), '*');
           return
         }
+        
+        console.log("%c" + data, 'background: #000; color: #ff00ff')
         let [firstArg, secondArg] = data.split(/ (.+)/s)
         if (firstArg === "ping") {
           send("!pong")
