remove info.created, add views

--- a/client/index.html
+++ b/client/index.html
@@ -413,9 +413,8 @@ Questions? Please reach out to kqwq#2348 on Discord or @squishypill on Twitter.
       </div>
     </form>
     Max players (2-100): <p id="kam-proj-max-players" contenteditable="true">-</p>
-
-    Author: <b id="kam-proj-author">-</b>
-    Views: <b id="kam-proj-views">-</b>
+    Views: <span id="kam-proj-views">-</span>
+    Author: <b id="kam-proj-author">-</b><br>
     <br><br>
     <button class="btn btn-primary" onclick="joinProject()" id="kam-proj-join">Join</button>
     <button class="btn btn-dark" onclick="editProjectButton()" id="kam-proj-edit">Edit</button>
