--- a/client/fetcherJSF.html
+++ b/client/fetcherJSF.html
@@ -36,8 +36,7 @@
   <a href="https://twitter.com/share"
    class="twitter-share-button"
     data-url="https://kqwq.me/metaverse/" 
-    data-text="Join the #kametaverse"
-    data-via="khanacademy"
+    data-text="Let's join the Metaverse!"
     > </a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
