--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@ Questions? Please reach out to kqwq#2348 on Discord or @squishypill on Twitter.
 <head>
   <meta charset="utf-8">
   <title>Client 4.9 pre</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/9.11.0/simplepeer.min.js"></script>
@@ -331,7 +332,12 @@ Questions? Please reach out to kqwq#2348 on Discord or @squishypill on Twitter.
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      width: 550px;
       padding: 10px;
+    }
+    .modal-content {
+      max-height: 95vh;
+      overflow: auto;
     }
 
     #ka-source-code {
