--- a/client/metaverse.html
+++ b/client/metaverse.html
@@ -7,7 +7,7 @@
   window.location.href = "https://kqwq.me/zeta4/client/"
 </script>
 
-<title>KA Metaverse - Redirecting</title>
+<title>KA Metaverse</title>
 
 <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
 If you are not redirected automatically, follow the <a href='https://kqwq.me/zeta4/client/'>link to example</a>
