--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@ Questions? Please reach out to kqwq#2348 on Discord or @squishypill on Twitter.
 
 <head>
   <meta charset="utf-8">
-  <title>Client 4.9 pre</title>
+  <title>KA Metaverse</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
